Double scrollbar fix for IE

--- a/css/fullscreen-nav.less
+++ b/css/fullscreen-nav.less
@@ -166,3 +166,14 @@ body .widget.extendednavigation {
 		}
 	}
 }
+
+// Remove Windows Scrollbars
+.overlay-hugeinc.open {
+	-ms-overflow-style: none;
+}
+
+.overlay-hugeinc.open::-webkit-scrollbar {
+	width: 0px!important;
+	height: 0px!important;
+}
+
